# Phast-Temperature-Analyser

./: .gitignore  README.md  build.bat  build.spec  main.py  pyproject.toml  test output.xlsx
src/: main.py
src/core/: worker.py
src/gui/: main_window.py
src/phast_temperature_analyser/: __main__.py
src/phast_temperature_analyser/core/: __init__.py  excel_processor.py  exporter.py  interpolation.py  types.py  worker.py
src/phast_temperature_analyser/gui/: __init__.py  main_window.py
