[project]
name = "2405p-phast-temperature-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
]

[project.scripts]
phast = "phast_temperature_analyser.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phast_temperature_analyser"]
